rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__content-mixed__encoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: text_roundtrip
---
num_types: 2
num_instances: 4
chunks:
  - Inst:
      type_id: 0
      type_name: Decal
      object_format: 0
      referents:
        - 0
        - 1
  - Inst:
      type_id: 1
      type_name: ImageLabel
      object_format: 0
      referents:
        - 2
        - 3
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Capabilities
      prop_type: SecurityCapabilities
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Color3
      prop_type: Color3
      values:
        - - 1
          - 1
          - 1
        - - 1
          - 1
          - 1
  - Prop:
      type_id: 0
      prop_name: Face
      prop_type: Enum
      values:
        - 5
        - 5
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - Decal_None
        - Decal_SpawnLocation
  - Prop:
      type_id: 0
      prop_name: DefinesCapabilities
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: TextureContent
      prop_type: Content
      values:
        - None
        - Uri: "rbxasset://textures/SpawnLocation.png"
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: ZIndex
      prop_type: Int32
      values:
        - 1
        - 1
  - Prop:
      type_id: 1
      prop_name: Active
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 1
      prop_name: AnchorPoint
      prop_type: Vector2
      values:
        - - 0
          - 0
        - - 0
          - 0
  - Prop:
      type_id: 1
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 1
      prop_name: AutoLocalize
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 1
      prop_name: AutomaticSize
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: BackgroundColor3
      prop_type: Color3
      values:
        - - 1
          - 1
          - 1
        - - 1
          - 1
          - 1
  - Prop:
      type_id: 1
      prop_name: BackgroundTransparency
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: BorderColor3
      prop_type: Color3
      values:
        - - 0
          - 0
          - 0
        - - 0
          - 0
          - 0
  - Prop:
      type_id: 1
      prop_name: BorderMode
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: BorderSizePixel
      prop_type: Int32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: Capabilities
      prop_type: SecurityCapabilities
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: ClipsDescendants
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 1
      prop_name: Draggable
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 1
      prop_name: ImageColor3
      prop_type: Color3
      values:
        - - 1
          - 1
          - 1
        - - 1
          - 1
          - 1
  - Prop:
      type_id: 1
      prop_name: ImageContent
      prop_type: Content
      values:
        - None
        - Uri: "rbxasset://textures/SpawnLocation.png"
  - Prop:
      type_id: 1
      prop_name: ImageRectOffset
      prop_type: Vector2
      values:
        - - 0
          - 0
        - - 0
          - 0
  - Prop:
      type_id: 1
      prop_name: ImageRectSize
      prop_type: Vector2
      values:
        - - 0
          - 0
        - - 0
          - 0
  - Prop:
      type_id: 1
      prop_name: ImageTransparency
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: Interactable
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 1
      prop_name: LayoutOrder
      prop_type: Int32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: Name
      prop_type: String
      values:
        - ImageLabel_None
        - ImageLabel_SpawnLocation
  - Prop:
      type_id: 1
      prop_name: NextSelectionDown
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 1
      prop_name: NextSelectionLeft
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 1
      prop_name: NextSelectionRight
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 1
      prop_name: NextSelectionUp
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 1
      prop_name: Position
      prop_type: UDim2
      values:
        - - - 0
            - 0
          - - 0
            - 0
        - - - 0
            - 0
          - - 0
            - 0
  - Prop:
      type_id: 1
      prop_name: ResampleMode
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: RootLocalizationTable
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 1
      prop_name: Rotation
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: DefinesCapabilities
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 1
      prop_name: ScaleType
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: Selectable
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 1
      prop_name: SelectionBehaviorDown
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: SelectionBehaviorLeft
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: SelectionBehaviorRight
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: SelectionBehaviorUp
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: SelectionGroup
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 1
      prop_name: SelectionImageObject
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 1
      prop_name: SelectionOrder
      prop_type: Int32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: Size
      prop_type: UDim2
      values:
        - - - 0
            - 100
          - - 0
            - 100
        - - - 0
            - 100
          - - 0
            - 100
  - Prop:
      type_id: 1
      prop_name: SizeConstraint
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: SliceCenter
      prop_type: Rect
      values:
        - - - 0
            - 0
          - - 0
            - 0
        - - - 0
            - 0
          - - 0
            - 0
  - Prop:
      type_id: 1
      prop_name: SliceScale
      prop_type: Float32
      values:
        - 1
        - 1
  - Prop:
      type_id: 1
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
  - Prop:
      type_id: 1
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 1
      prop_name: TileSize
      prop_type: UDim2
      values:
        - - - 1
            - 0
          - - 1
            - 0
        - - - 1
            - 0
          - - 1
            - 0
  - Prop:
      type_id: 1
      prop_name: Visible
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 1
      prop_name: ZIndex
      prop_type: Int32
      values:
        - 1
        - 1
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
        - - 3
          - -1
  - End
